WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234356
REGRESSION (
r287068
): [macOS arm64] TestWebKitAPI.GraphicsContextGLCocoaTest.UnrecycledDisplayBuffersNoLeaks is failing
https://bugs.webkit.org/show_bug.cgi?id=234356
Summary
REGRESSION (r287068): [macOS arm64] TestWebKitAPI.GraphicsContextGLCocoaTest....
Ryan Haddad
Reported
2021-12-15 11:21:37 PST
TestWebKitAPI.GraphicsContextGLCocoaTest.UnrecycledDisplayBuffersNoLeaks is failing on arm64 macOS bots after
https://trac.webkit.org/changeset/287068/webkit
, x86 bots are not affected. TestWebKitAPI.GraphicsContextGLCocoaTest.UnrecycledDisplayBuffersNoLeaks /Volumes/Data/worker/monterey-release/build/Tools/TestWebKitAPI/Tests/WebCore/cocoa/TestGraphicsContextGLCocoa.mm:242 Value of: memoryFootprintChangedBy(lastFootprint, footprintChange, footprintError) Actual: false (Footprint changed by 827590144. Expected at most 0+-157286400) Expected: true
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.GraphicsContextGLCocoaTest.UnrecycledDisplayBuffersNoLeaks
Attachments
Patch
(4.14 KB, patch)
2021-12-16 05:37 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-12-15 11:21:49 PST
<
rdar://problem/86533892
>
Kenneth Russell
Comment 2
2021-12-15 12:00:22 PST
To be clear: that commit was the ANGLE roll to 2021-12-14 in
Bug 234317
. We'd strongly prefer to not revert that roll. Is there any indication what might have caused this?
Ryan Haddad
Comment 3
2021-12-15 12:41:28 PST
(In reply to Kenneth Russell from
comment #2
)
> To be clear: that commit was the ANGLE roll to 2021-12-14 in
Bug 234317
. > > We'd strongly prefer to not revert that roll. Is there any indication what > might have caused this?
Kyle is investigating.
Kimmo Kinnunen
Comment 4
2021-12-15 12:43:02 PST
I cannot attend to it until tomorrow. If it's a problem, naming it DISABLED_Unrecycled.. would skip it temporarily
Kimmo Kinnunen
Comment 5
2021-12-16 05:37:51 PST
Created
attachment 447348
[details]
Patch
EWS Watchlist
Comment 6
2021-12-16 05:39:14 PST
Note that there are important steps to take when updating ANGLE. See
https://trac.webkit.org/wiki/UpdatingANGLE
Kyle Piddington
Comment 7
2021-12-16 14:50:54 PST
Comment on
attachment 447348
[details]
Patch LGTM, great catch.
Kenneth Russell
Comment 8
2021-12-16 18:38:50 PST
Amazing work Kimmo tracking this down! r+ from me as well.
Kenneth Russell
Comment 9
2021-12-16 18:39:13 PST
Filed
https://bugs.chromium.org/p/angleproject/issues/detail?id=6829
about upstreaming this to ANGLE. I'll help with that.
EWS
Comment 10
2021-12-17 03:18:13 PST
kpiddington@apple.com
does not have reviewer permissions according to
https://raw.githubusercontent.com/WebKit/WebKit/main/metadata/contributors.json
. Rejecting
attachment 447348
[details]
from commit queue.
Antti Koivisto
Comment 11
2021-12-17 03:21:06 PST
Comment on
attachment 447348
[details]
Patch rs=me, actual review by Kyle Piddington
EWS
Comment 12
2021-12-17 04:00:36 PST
Committed
r287178
(
245347@main
): <
https://commits.webkit.org/245347@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 447348
[details]
.
Kenneth Russell
Comment 13
2021-12-17 16:36:47 PST
For bookkeeping purposes, the new test was added under
Bug 233328
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug